переверстал формы логина/авторизации

--- a/base/templates/base/layout.html
+++ b/base/templates/base/layout.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="{% static 'base/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'base/css/assortment.css' %}">
-    <link rel="stylesheet" href="{% static 'users/css/register.css' %}">
+<!--    <link rel="stylesheet" href="{% static 'users/css/register.css' %}">-->
     {% block css %} {% endblock %}
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.0/css/all.css">
