--- a/base/static/base/css/main.css
+++ b/base/static/base/css/main.css
@@ -42,6 +42,8 @@ body {
 }
 
 .logo {
+	margin-left: -10px;
+	margin-top: -50px;
 	font-size: 40px;
 	font-family: 'Quicksand', sans-serif;
 	color: #00D4C6;
