--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,17 +1,54 @@
 {% extends 'base/layout.html' %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'users/css/register.css' %}">
+{% endblock %}
 
 {% block content %}
 <div class="register_div">
-    <h1>{{title}}</h1>
-    <a href="{% url 'register' %}">
-        <h3 class="registr">(Регистрация)</h3>
-    </a>
 
-    <form class="register" method="post">
+     <form class="login" method="post">
+         <h1>{{title}}</h1>
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-warning" type="submit">Войти</button>
+         <a href="{% url 'register' %}">
+        <h3 class="registr">(Регистрация)</h3>
+    </a>
     </form>
+
+
+<!--    <form class="register" method="post">-->
+<!--        {% csrf_token %}-->
+<!--&lt;!&ndash;        <p><label for="id_username">Имя пользователя:</label><input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username"></p>&ndash;&gt;-->
+<!--&lt;!&ndash;        <p><label for="id_password">Пароль:</label><input type="password" name="password" autocomplete="current-password" required="" id="id_password"></p>&ndash;&gt;-->
+<!--        <button class="btn btn-warning" type="submit">Войти</button>-->
+<!--    </form>-->
+<!--      <section>-->
+<!--          <form class="register" method="post">-->
+<!--            {% csrf_token %}-->
+<!--           <div class="signin">-->
+<!--            <div class="content">-->
+<!--             <h2>Войти</h2>-->
+<!--             <div class="form">-->
+<!--              <div class="inputBox">-->
+<!--               <input type="tel" name="username" required="" autocomplete="on" maxlength="20" id="id_username"> <i>Номер телефона</i>-->
+<!--              </div>-->
+<!--              <div class="inputBox">-->
+<!--               <input type="password" name="password" required="" autocomplete="on" id="id_password"> <i>Пароль</i>-->
+<!--              </div>-->
+<!--              <div class="links"> <a href="#">Forgot Password</a> <a href="#">Signup</a>-->
+<!--              </div>-->
+<!--              <div class="inputBox">-->
+<!--                  <button class="btn btn-warning" type="submit">Войти</button>-->
+<!--&lt;!&ndash;               <input type="submit" value="Войти">&ndash;&gt;-->
+<!--              </div>-->
+<!--             </div>-->
+<!--            </div>-->
+<!--           </div>-->
+<!--          </form>-->
+<!--    </section>-->
 
 </div>
 
