--- a/base/static/base/css/assortment.css
+++ b/base/static/base/css/assortment.css
@@ -1,3 +1,7 @@
+.title_mobile {
+    display: none;
+}
+
 .quantity_product_a {
     width: 35%;
     margin-left: auto;
@@ -184,6 +188,7 @@
 
 
 .assortment {
+    position:relative;
     margin-right: 15px;
   display: inline-block;
   clear: both;
@@ -300,8 +305,8 @@
 }*/
 
 /*.button_asort {*/
-
-/*    margin-top: -30px;*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
 /*}*/
 
 .total-price {
@@ -315,7 +320,10 @@
   height: 40px;
   font-size: 80%;
   margin-left:auto;
+
 }
+
+
 
 .button_bask {
   width: 100px;
@@ -346,6 +354,7 @@
   font-family: Comic Sans MS, Comic Sans, cursive;
   font-weight: bold;
   width: 100%;
+
 }
 
 .text_block h3 {
@@ -355,10 +364,13 @@
   word-wrap: break-word; /* Переносит слова на новую строку по необходимости */
   overflow-wrap: break-word; /* Переносит слова, если они слишком длинные */
     overflow: hidden;
-    display: -webkit-box;
-   -webkit-line-clamp: 4; /* number of lines to show */
-           line-clamp: 4;
+   -webkit-line-clamp: 2; /* number of lines to show */
+           line-clamp: 2;
    -webkit-box-orient: vertical;
+}
+
+.title_desktop {
+    display: -webkit-box;
 }
 
 .text_block h4 {
@@ -383,6 +395,14 @@
   text-decoration: none;
   display: block;
   transition: transform .6s ease;
+}
+
+.nail_mobile {
+    display: none;
+}
+
+.nail_desktop {
+    margin-top: 20px;
 }
 
 .counter-input {
@@ -434,6 +454,10 @@
 .info_product button a{
   text-decoration: none;
   font-size: 17px;
+}
+
+.price_mobile {
+    display: none;
 }
 
 .assortment_basket input {
@@ -607,7 +631,7 @@
 
     .abs_basket {
         top: 35%;
-        margin-left: 10%;
+        margin-left: 1%;
     }
 
   .bask{
@@ -647,6 +671,129 @@
     }
 }
 
+@media screen and (max-width: 706px){
+    .abs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Пространство между карточками */
+    }
+
+    .assortment {
+        min-height: 300px;
+      width: calc(50% - 15px); /* Две карточки рядом с учетом отступов*/
+      box-sizing: border-box;
+      /*margin-bottom: 5px; !* Расстояние между рядами карточек *!*/
+      background-color: #fff;
+      /*  background-color: #1b1b1b;*/
+      border: 1px solid #ddd;
+        height: 350px;
+        margin: 0 5px 5px 5px;
+    }
+    .button_asort .btn-danger, .button_bask .btn-danger {
+        display: none;
+    }
+    .price {
+        display: none;
+    }
+    .price_mobile {
+        display: block;
+        margin: 0;
+    }
+
+    #info {
+        display: none;
+    }
+    /*h5 {*/
+    /*    display: none;*/
+    /*}*/
+    .quantity_product_a {
+        /*display: none;*/
+        position: absolute;
+        bottom: 2%;
+        left: 10%;
+        width: 80%; /* Ширина кнопки */
+        height: 40px;
+      margin: 0 auto;
+      background-color: #5cb75c;
+      padding: 10px 0;
+      font-size: 16px;
+      text-align: center;
+        border-radius: 5px;
+    }
+
+    .quantity_product_a button, .quantity_product_a input {
+        background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+        color: white;
+    }
+
+    .assortment img {
+      display: block;
+      width: 100%;
+      height: 150px; /* Статическая высота */
+      object-fit: cover;
+      cursor: pointer;
+    }
+
+    .text_block h4 {
+      color: red;
+      font-weight: bold;
+    }
+
+    .text_block p {
+      margin: 10px 0;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2; /* Ограничение на 2 строки */
+      -webkit-box-orient: vertical;
+      text-overflow: ellipsis;
+    }
+
+    .button_asort .btn-success {
+        z-index: 100;
+      display: block;
+      width: 80%; /* Ширина кнопки */
+      margin: 0 auto;
+      background-color: #5cb85c;
+      color: #fff;
+      border: none;
+      padding: 10px 0;
+      font-size: 16px;
+      cursor: pointer;
+      text-align: center;
+        position: absolute;
+        bottom: 2%;
+        left: 10%;
+    }
+
+    .title_mobile {
+        display: block;
+        display: -webkit-box;
+        margin-top: 10px;
+    }
+    .text_block h3 {
+        width: 100%;
+    }
+    .title_desktop {
+        display: none;
+    }
+    .nail_mobile {
+        display: block;
+        font-size: 13px;
+    }
+    .nail_desktop {
+        display: none;
+    }
+    /*.abs_basket {*/
+    /*    margin-left: 0;*/
+    /*}*/
+
+}
+
 @media only screen and (max-width: 530px){
     .mobileUl ul li,
     .mobileUl ul a {
@@ -664,9 +811,6 @@
 
     .abs {
         top: 40%;
-    }
-    .abs_basket {
-        margin-left: 5%;
     }
 
 }
