--- a/base/templates/base/basket.html
+++ b/base/templates/base/basket.html
@@ -32,30 +32,27 @@
                         <button onclick="closeDialog('{{ el.id }}')">X</button>
                  </dialog>
 
-                    <div class="text_block">
-                        <h3 class='title_desktop' style="">{{ el.title }}</h3><br>
-                        <h4 class='price_mobile'>{{ el.price }}</h4>
-                        <h3 class='title_mobile'>{{ el.title }}</h3>
-                        <h4 class="price">Цена: {{ el.price }}</h4>
-                        <h5 class="nail_desktop">В наличии: {{ el.quantity }}</h5>
-                        <h5 class="nail_mobile">В наличии: {{ el.quantity }}</h5>
-                        <div class="button_asort" style="">
-                            <button class="btn btn-info" id="info" onclick="openDialog('{{ el.id }}')">
-                                <span class="text_about1">Описание</span>
-                            </button>
-                            <button id="delete-to-cart-{{ el.id }}" class="btn btn-danger" onclick="removeFromCart('{{ el.id }}')">
-                                <span class="text_out1"><a href="{% url 'delete_to_cart_basket' %}?id={{ el.id }}">Из корзины</a></span>
-                            </button>
-                            <div class="quantity_product_a" data-id="{{ el.id }}" id="product-card" quantity="{{ el.quantity }}">
-                                      <button class="increase-btn"><i class="bi bi-plus-lg"></i></button>
-                                      <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="100" data-product-id="{{ el.id }}">
-                                      <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
-                                </div>
+                <div class="text_block">
+                    <h3 class='title_desktop' style="">{{ el.title }}</h3><br>
+                    <h4 class='price_mobile'>{{ el.price }}</h4>
+                    <h3 class='title_mobile'>{{ el.title }}</h3>
+                    <h4 class="price">Цена: {{ el.price }}</h4>
+                    <h5 class="nail_desktop">В наличии: {{ el.quantity }}</h5>
+                    <h5 class="nail_mobile">В наличии: {{ el.quantity }}</h5>
+                    <div class="button_asort" style="">
+                        <button class="btn btn-info" id="info" onclick="openDialog('{{ el.id }}')">
+                            <span class="text_about1">Описание</span>
+                        </button>
+                        <button id="delete-to-cart-{{ el.id }}" class="btn btn-danger" onclick="removeFromCart('{{ el.id }}')">
+                            <span class="text_out1"><a href="{% url 'delete_to_cart_basket' %}?id={{ el.id }}">Из корзины</a></span>
+                        </button>
+                        <div class="quantity_product_a" data-id="{{ el.id }}" id="product-card" quantity="{{ el.quantity }}">
+                          <button class="increase-btn"><i class="bi bi-plus-lg"></i></button>
+                          <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="100" data-product-id="{{ el.id }}">
+                          <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
                         </div>
-
-
+                    </div>
                 </div>
-
             </div>
 	    {% endfor %}
 
@@ -66,7 +63,7 @@
             <h5 class="total-quantity">Товары: {{number}} штук</h5>
             <h3 class="total-price">Итого: {{summa}} рублей</h3>
             <div class="button_buy">
-                <button onclick="openPopup('{{request.user.username}}', '{{summa}}', '{{request.user.last_name}}')" class="btn btn-success">Заказать</button>
+                <button onclick="openPopup('{{request.user.username}}', '{{summa}}', '{{request.user.last_name}}',  '{{info}}', '{{request.user.id}}')" class="btn btn-success">Заказать</button>
             </div>
         </div>
     </div>
@@ -95,7 +92,7 @@
         <div class="pad_text">
             <h5 class="total-q">Товары: {{number}} штук</h5>
             <h3 class="total-p">Итого: {{summa}} рублей</h3>
-            <button onclick="openPopup('{{request.user.username}}', '{{summa}}', '{{request.user.last_name}}')" class="btn btn-success">Заказать</button>
+            <button onclick="openPopup('{{request.user.username}}', '{{summa}}', '{{request.user.last_name}}', '{{info}}', '{{request.user.id}}')" class="btn btn-success">Заказать</button>
         </div>
     </div>
 
@@ -109,6 +106,7 @@
 const increaseBtns = document.querySelectorAll('.increase-btn');
 const decreaseBtns = document.querySelectorAll('.decrease-btn');
 let totalPrice = 0;
+// let totalPrice = 0;
 
 // Добавляем обработчики событий к каждой кнопке увеличения
 increaseBtns.forEach(function(btn) {
@@ -145,6 +143,8 @@ function updateCartData() {
 
     let requests = [];
     let totalQuantity = 0;
+    totalPrice = 0;
+    // let totalPrice = 0;
 
     counterInputs.forEach(input => {
         const productId = input.dataset.productId;
@@ -169,6 +169,7 @@ function updateCartData() {
         .then(data => {
             // Обновляем общую стоимость
             totalPrice += data.product_price;
+            // totalPrice_kassa += data.product_price;
         })
         .catch(error => {
             console.error('Ошибка при обновлении корзины:', error);
@@ -201,7 +202,7 @@ counterInputs.forEach(input => {
 });
 
 
-function openPopup(username, summa, name) {
+function openPopup(username, summa, name, info, id) {
     if (totalPrice !== 0){
         summa = totalPrice;
     }
@@ -214,13 +215,13 @@ function openPopup(username, summa, name) {
             body: JSON.stringify({
                 'username': username,
                 'summa': summa,
-                'name': name
+                'name': name,
+                // 'info': info,
+                'id': id
             })
         })
         .then(response => response.json())
         .then(data => {
-            console.log(12222222235555555);
-            console.log(summa);
             console.log(data.link);
             document.getElementById("pay").onclick = function () {
                 location.href = data.link;
@@ -229,7 +230,6 @@ function openPopup(username, summa, name) {
         .catch(error => {
             console.error('Ошибка:', error);
         });
-    // получить в ответе от сервера ссылку на юкассу и задать эту ссылку второй кнопке заказать
 
   var popup = document.getElementById("popup");
   popup.style.display = "block";
