-2 критические уязвимости и дизайн поправки

--- a/base/static/base/css/assortment.css
+++ b/base/static/base/css/assortment.css
@@ -208,8 +208,9 @@
 
 .abs {
   margin-left: 450px;
-  top: 35%;
-  position: absolute;
+  margin-top: 150px;
+  /*position: absolute;*/
+    margin-bottom: 100px;
 
   justify-content: space-around;
   display: flex;
