--- a/base/templates/base/assortment.html
+++ b/base/templates/base/assortment.html
@@ -98,9 +98,7 @@
                                       <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
                                 </div>
 
-
                             </div>
-
 
                             <h3 class='title_desktop' style="margin-top: -100px;">{{ el.title }}</h3><br>
                             <h4 class='price_mobile'>{{ el.price }}</h4>
@@ -112,6 +110,7 @@
                 </div>
             {% endif %}
 	    {% endfor %}
+<!--        <div class="assortment"></div>-->
 
 <!--        <div class="footer-spacer"></div>-->
 <!--        <div class="footer"></div>-->
