--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -7,9 +7,11 @@
 {% block content %}
     <div class="description">
 		<h1>Название магазина </h1>
-		<p>Краткое, но емкое описание магазина, идеологии, всего, что душе угодно.</p>
+		<p>Краткое, но емкое описание магазина, идеологии, всего, что душе угодно. Более подробно можно описать на вкладке "О нас",
+			либо убрать эту вкладку с сайта, а все описание внедрить на эту страницу. Также, вместо описания, сюда можно добавить
+			любой другой контент, будь-то популярные товары или что-либо другое</p>
 		<br>
-		<a href="{% url 'assortment' %}" class="shop">Купить сейчас</a>
+		<a href="{% url 'assortment' %}" class="shop">наш ассортимент</a>
 	</div>
 
 	<div class="post-navigation">
@@ -17,7 +19,7 @@
 <!--			<li><a class="link" href="#"><i class="fab fa-facebook-square"></i></a></li>-->
 <!--			<li><a class="link" href="#"><i class="fab fa-twitter-square"></i></a></li>-->
 <!--			<li><a class="link" href="#"><i class="fab fa-linkedin"></i></a></li>-->
-			<li><a class="link" href="https://t.me/+7zbzKEKZi3RlOTky"><i class="fab fa-tumblr-square"></i></a></li>
+<!--			<li><a class="link" href="https://t.me/+7zbzKEKZi3RlOTky"><i class="fab fa-tumblr-square"></i></a></li>-->
 		</ul>
 	</div>
 {% endblock %}
