--- a/base/templates/base/about.html
+++ b/base/templates/base/about.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <div class="description">
-			<h1>Про RRShop</h1>
+			<h1>Про (название магазина)</h1>
+			<p><b>(текст-описание другого магазина, для примера)</b></p>
 			<p>Мы знаем куда пойти за хлебом с маслом, где купить резину на авто, памперсы ребёнку или ручку с бумагой. На конкретные задачи - есть предложение и способ закрыть потребность.</p>
 			<p>Служение "Царских Охотников" из года в год развивается и уже находиться на этапе стабильного развития и прироста детей и командиров. В организации чётко и отлажено работает снабжение официальными элементами униформы. Товарами бытового обихода, сувенирной категории отводится на самостоятельный поиск</p>
 			<p>Я, будучи командиром в отряде 4й год заметил особую пользу в подарках и материальных поощрениях ребят. Когда появлялась необходимость подарка ребятам, родителями или командирам по началу служения - вопрос решался подарком базового набора, или элементов одежды с айдентикой. При этом в половине случаев товары с айдентикой необходимо было заказывать и продумывать за 2-3 недели. А так же дополнительного времени на реализацию дополнительных 3-5 часов на закупку,продумывания, забрать и так далее.</p>
