--- a/base/templates/base/layout.html
+++ b/base/templates/base/layout.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="{% static 'base/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'base/css/assortment.css' %}">
+    <link rel="stylesheet" href="{% static 'base/css/as3.css' %}">
 <!--    <link rel="stylesheet" href="{% static 'users/css/register.css' %}">-->
     {% block css %} {% endblock %}
 
@@ -26,21 +27,21 @@
     <header>
 
         <div class="navigation">
-            <div><a href="{% url 'home' %}" class="logo">RRShop</a></div>
+            <div><a href="{% url 'home' %}" class="logo">Магазин</a></div>
             <div class="menu">
                 <ul class="nav">
-                    <li><a class="link {% if active_b == 'index' %}active{%endif%}" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i> Главная</a></li>
-                    <li><a class="link {% if active_b == 'assortment' %}active{%endif%}" href="{% url 'assortment' %}"><i class="fa-solid fa-list"></i> Ассортимент</a></li>
-                    <li><a class="link {% if active_b == 'about' %}active{%endif%}" href="{% url 'about' %}"><i class="fa-solid fa-address-card"></i> Про нас</a></li>
+                    <li><a class="link {% if active_b == 'index' %}active{%endif%}" href="{% url 'home' %}"><i class="fa-solid fa-house-user" style="display: none;"></i> Главная</a></li>
+                    <li><a class="link {% if active_b == 'assortment' %}active{%endif%}" href="{% url 'assortment' %}"><i class="fa-solid fa-list" style="display: none;"></i> Ассортимент</a></li>
+                    <li><a class="link {% if active_b == 'about' %}active{%endif%}" href="{% url 'about' %}"><i class="fa-solid fa-address-card" style="display: none;"></i> Про нас</a></li>
         <!--            <li><a class="link {% if active_b == 'contacts' %}active{%endif%}" href="{% url 'contacts' %}"><i class="fa-solid fa-address-book"></i> Контакты</a></li>-->
                 </ul>
                 <ul class="nav icon">
                     {% if not request.user.is_authenticated %}
-                        <li><a href="{% url 'register' %}"><i class="fas fa-shopping-cart"></i></a></li>
-                        <li><a href="{% url 'register' %}"><i class="fas fa-user"></i></a></li>
+                        <li><a href="{% url 'register' %}"><i class="fas fa-shopping-cart" style="display: none;"></i>Корзина</a></li>
+                        <li><a href="{% url 'register' %}"><i class="fas fa-user" style="display: none;"></i>Личный кабинет</a></li>
                     {% else %}
-                        <li><a class="link {% if active_b == 'basket' %}active{%endif%}" href="{% url 'basket' %}"><i class="fas fa-shopping-cart"></i></a></li>
-                        <li><a class="link {% if active_b == 'private' %}active{%endif%}" href="{% url 'private' %}"><i class="fas fa-user"></i>Личный кабинет</a></li>
+                        <li><a class="link {% if active_b == 'basket' %}active{%endif%}" href="{% url 'basket' %}"><i class="fas fa-shopping-cart" style="display: none;"></i>Корзина</a></li>
+                        <li><a class="link {% if active_b == 'private' %}active{%endif%}" href="{% url 'private' %}"><i class="fas fa-user" style="display: none;"></i>Личный кабинет</a></li>
                         {% if user.is_superuser %}
                             <li><a href="{% url 'news_home' %}" class="link"><i class="bi bi-bag-plus-fill"></i></a></li>
                         {% endif %}
