--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="register_div">
 
-     <form class="login" method="post">
+     <form class="login_form" method="post">
          <h1>{{title}}</h1>
         {% csrf_token %}
         {{ form.as_p }}
