--- a/base/static/base/css/assortment.css
+++ b/base/static/base/css/assortment.css
@@ -145,6 +145,7 @@
 	max-width: 60%;
 	padding-top: 2rem;
 	border-radius: 20px;
+    min-width: 250px;
 	border: 0;
 	box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
 	animation: fadeIn 1s ease both;
