--- a/base/templates/base/basket.html
+++ b/base/templates/base/basket.html
@@ -24,12 +24,13 @@
 	    {% endfor %}
         {% for el in products %}
             <div class="assortment">
-                <img src="/media/{{el.image}}" onclick="openImage('/media/{{el.image}}')">
+                <img src="{% static 'news/' %}{{ el.image }}" onclick="openImage('{% static 'news/' %}{{ el.image }}')">
 
-                 <dialog id="dialog-{{ el.id }}">
-                        <h2>Описание товара: {{ el.title }}</h2>
-                        <p>Описание товара: {{ el.additional_info }}</p><br><br>
-                        <button onclick="closeDialog('{{ el.id }}')">X</button>
+                 <dialog id="dialog-{{ el.id }}" class="dialog_menu">
+                     <h2>{{ el.title }}</h2>
+                     <p>{{ el.additional_info }}</p>
+                    <p></p>
+                    <button onclick="closeDialog('{{ el.id }}')" aria-label="close" class="x">❌</button>
                  </dialog>
 
                 <div class="text_block">
@@ -48,7 +49,7 @@
                         </button>
                         <div class="quantity_product_a" data-id="{{ el.id }}" id="product-card" quantity="{{ el.quantity }}">
                           <button class="increase-btn"><i class="bi bi-plus-lg"></i></button>
-                          <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="100" data-product-id="{{ el.id }}">
+                          <input id='input_{{ el.id }}' type="number" class="counter-input" value="{{ el.quantity_basket }}" min="1" max="{{ el.quantity }}" data-product-id="{{ el.id }}">
                           <button class="decrease-btn"><i class="bi bi-dash-lg"></i></button>
                         </div>
                     </div>
@@ -101,10 +102,26 @@
 
 
 <script>
+const click_div = document.querySelectorAll('.assortment');
 const increaseBtns = document.querySelectorAll('.increase-btn');
 const decreaseBtns = document.querySelectorAll('.decrease-btn');
 let totalPrice = 0;
 // let totalPrice = 0;
+
+click_div.forEach(function(div) {
+    div.addEventListener('click', function(event) {
+        if (event.target.tagName !== "IMG" && event.target.tagName !== "BUTTON" && event.target.tagName !== "SPAN" && event.target.tagName !== "INPUT" && event.target.tagName !== "I"){
+            const quantityDiv = div.querySelector('.quantity_product_a');
+            if (quantityDiv) {
+                const dataId = quantityDiv.getAttribute('data-id');
+                console.log('Data ID:', dataId);
+                openDialogMobile(dataId);
+            }
+        }
+
+    });
+});
+
 
 // Добавляем обработчики событий к каждой кнопке увеличения
 increaseBtns.forEach(function(btn) {
@@ -211,7 +228,22 @@ function updateCartData() {
 
 // Обработчик события изменения количества товара в input
 function handleQuantityChange(event) {
-    updateCartData();
+    // console.log(event.target.dataset.productId);
+    if (parseInt(event.target.value) === 0){
+        const productId = event.target.closest('#product-card').getAttribute('data-id');
+        removeFromCart(productId);
+        const productCard = event.target.closest('.assortment');
+        if (productCard) {
+            productCard.remove();
+       }
+    } else if (parseInt(event.target.max) >= parseInt(event.target.value)){
+        updateCartData();
+    } else if (parseInt(event.target.max) < parseInt(event.target.value)){
+        const id_input = event.target.closest('#product-card').getAttribute('data-id');
+        const input = event.target.closest(`#input_${id_input}`)
+        input.value = event.target.max;
+        updateCartData();
+    }
 }
 
 // Добавляем обработчик события изменения количества товара для каждого input
@@ -306,6 +338,13 @@ function closeImageModal() {
 function openDialog(dialogId) {
     const dialog = document.getElementById(`dialog-${dialogId}`);
     dialog.showModal();
+}
+
+function openDialogMobile(dialogId) {
+    if (window.innerWidth <= 706){
+        const dialog = document.getElementById(`dialog-${dialogId}`);
+        dialog.showModal();
+    }
 }
 
 function closeDialog(dialogId) {
